--- a/src/app/analiz/analiz-style.css
+++ b/src/app/analiz/analiz-style.css
@@ -1,4 +1,3 @@
-/* analiz-style.css */
 @font-face {
   font-family: "Montserrat";
   src: url("/fonts/Montserrat-Black.ttf") format("truetype");
@@ -148,6 +147,15 @@ body {
   transition: background-color 0.2s ease;
 }
 
+/* Checkbox renkleri */
+.MuiDataGrid-root .MuiCheckbox-root {
+  color: #bd2f2c !important;
+}
+
+.MuiDataGrid-root .MuiCheckbox-root.Mui-checked {
+  color: #bd2f2c !important;
+}
+
 .rotating-icon {
   animation: spin 1.5s linear infinite;
 }
@@ -285,30 +293,7 @@ body {
   }
 }
 
-
-/* Önceki animasyon */
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-/* Daktilo efekti */
-.typewriter {
-  display: inline-block;
-}
-
-.cursor {
-  display: inline-block;
-  animation: blink 0.7s infinite;
-}
-
-@keyframes blink {
-  0% { opacity: 1; }
-  50% { opacity: 0; }
-  100% { opacity: 1; }
-} 
-
-/* Önceki animasyonlar */
+/* Animasyonlar */
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
@@ -329,7 +314,6 @@ body {
   100% { opacity: 1; }
 }
 
-/* Popup animasyonu */
 @keyframes fadeIn {
   from { opacity: 0; transform: scale(0.95); }
   to { opacity: 1; transform: scale(1); }
